# TransferTool

./: README.md
header/: commandAnaly.hpp  dataPackage.hpp  dirReader.hpp  fileTransferClient.hpp  fileTransferServer.hpp  messageTransferClient.hpp  messageTransferServer.hpp  tcpSocket.hpp  udpSocket.hpp  utils.hpp
src/: CMakeLists.txt  cJSON.c  clientMain.cpp  commandAnaly.cpp  dataPackage.cpp  dirReader.cpp  fileTransferClient.cpp  fileTransferServer.cpp  messageTransferClient.cpp  messageTransferServer.cpp  serverMain.cpp  tcpsocket.cpp  udpsocket.cpp
